--- a/server/vercel.json
+++ b/server/vercel.json
@@ -15,6 +15,6 @@
   ],
   "env": {
     "MONGO_URL": "mongodb+srv://rafikantonyan105:XX5NJ7I4SAp7eAPX@cluster0.jzrpvec.mongodb.net/chat",
-    "PORT": 5000
+    "PORT": "5000"
   }
 }
